updated copyright name index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <a href="#">Terms</a>
       <a href="#">Help</a>
       <a href="#">Contact uploading and non-users</a>
-      <p>Meta &copy; 2025</p>
+      <p>Khu Shi &copy; 2025</p>
     </div>
   </body>
 </html>
